Changes since v12.09
================================================================================


--------------------------------------------------------------------------------
general

-- across the board spelling fixes
-- On linux, now compiles Position Independent Code (PIC) by default (see src/makedefs)

--------------------------------------------------------------------------------
basic

   linux/lock.h
      1) By default, now using  __sync_lock_test_and_set() and __sync_lock_release()

   Thread classes
      1) Fixed double thread termination.

--------------------------------------------------------------------------------
basicGL

   Display class
      1) Fixed a bug associated with readFrameBuffer() returning a
         boolean false, when it should return 0.

   Image class
      1) Updated to read BMP files on Big-endian systems

--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
gui-glut

   GlutDisplay class
      1) reshapeSubWindow() -- added a glutPostWindowRedisplay() call since the
      glutReshapeWindow() didn't always take on Linux.

--------------------------------------------------------------------------------
otw


--------------------------------------------------------------------------------
recorder


--------------------------------------------------------------------------------
simulation

   Navigation class
      1) Added an initial route, which is set with the 'route' slot (setSlotRoute()),
      and is used by reset() to reset the route to it's initial input value.
      2) Added setRoute(), which like setSlotRoute(), will set the current route,
      but it does not set the initial route used by reset().

--------------------------------------------------------------------------------
vehicle


--------------------------------------------------------------------------------
